# arquivos_rtp_downloader

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.ps1
.github/workflows/: github-actions-demo.yml  main.yml  master.yml  rust.yml
src/: main.rs  queue.rs
src/cmd/: main.rs
src/gui/: main.rs
src/lib/: lib.rs  queue.rs  video.rs  video_downloader.rs
