[package]
name = "arquivos_rtp_downloader"
version = "0.2.0"
authors = ["Vasco Ferreira <vasco_mmf@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.1"
tokio = {version = "1.2.0", features = ["full"]}
regex = "1.4.3"

[[bin]]
name = "artp-dl"
path = "src/main.rs"